# ece5532-finalproject

final_project/: CMakeLists.txt
final_project/cfg/: Final_Project.cfg
final_project/launch/: Finalproject.launch  FinalprojectLidar.launch
final_project/src/: DriveFP.cpp  GpsCodeFP.cpp  LidarCodeFP.cpp
src/final_project/Urdf/: audibot_gps_and_camera_and_lidar.urdf.xacro
src/final_project/launch/: TwoAudibotLaneFollowing.launch
src/final_project/src/: DriveFP.cpp  GpsCodeFP.cpp  LidarCodeFP.cpp
src/image_processing/: CMakeLists.txt  package.xml
src/image_processing/launch/: image_processing_launch.launch
src/image_processing/src/: image_processing.cpp
src/opencv_package/cfg/: RgbHough.cfg
src/opencv_package/src/: RgbHough.cpp
