<?xml version="1.0"?>
<package format="2">
<name>image_processing</name>
<version>0.0.0</version>
<description>This is a package to calculate depths from an image</description>
<maintainer email="abc@xyz.com">ABC</maintainer>
<license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>
<depend>roscpp</depend>
<depend>dynamic_reconfigure</depend>
</package>